--- a/raon-control/maintest.html
+++ b/raon-control/maintest.html
@@ -9,7 +9,7 @@
 
     .box {
         animation-name: movingBox;
-        animation-duration: 2300ms;
+        animation-duration: 2000ms;
         animation-iteration-count: infinite;
         animation-direction: alternate;
 
@@ -22,21 +22,24 @@
     @keyframes movingBox {
         0% {
             transform: translate(0, 0);
-            opacity: 0.3;
+            opacity: 1.0;
         }
-
+/* 
         25% {
             opacity: 0.9;
-        }
+        } */
 
         50% {
-            transform: translate(100px, 100px);
-            opacity: 0.2;
+            transform: translate(300px, 0px);
+            transform: scale(0.5, 0.5);
+            opacity: 0.5;
         }
 
         100% {
-            transform: translate(30px, 30px);
-            opacity: 0.8;
+            transform: translate(300px, 0px);
+            
+
+            opacity: 1.0;
         }
     }
 </style>
