--- a/raon-control/maintest.html
+++ b/raon-control/maintest.html
@@ -110,36 +110,52 @@
     function myMove() {
         var divBox1 = document.getElementById("svg1-box");
         var divBox2 = document.getElementById("svg2-box");
-        var initPos = 0;
-        var initScale = 1.0;
-        var divBox1InitPos = 0;
-        var divBox2InitPos = 200;
-
+        var initPos = 200;
+        var finalPos = 500;
+        var distance = Math.abs(finalPos - initPos);
+        var finalScale = 0.5;
+        var scaleFactor = 1 - finalScale;
+        var opacity = 1.0;
         // console.log(divBox1InitPos, divBox2InitPos);
 
         var dt = 0.0;
         var x = 0.0;
-        var y = 0.0;
-        var id = setInterval(frame, 5);
+        var leftPos = 0;
 
-        function frame() {
-            if (dt > 0.4) {
+        // var animationDuration = 1; //s
+        // var interval = 0.005; //s
+        // var frame = animationDuration / interval;
+        // var count = 0;
+        var id = setInterval(myFunction, 5);
+
+        function myFunction() {
+            if (leftPos == finalPos) {
                 clearInterval(id);
             }
             else {
-                initPos += 2;
-                initScale -= 0.003;
+                // initPos += 5;
+                // scale -= 0.002;
 
-                dt += 0.001;
-                x = 2 * dt - 1;
-                y = Math.pow(x, 3) + 2;
+                dt += 0.005;
+                x = 1 - Math.pow(2, -10 * dt);
+                // y = Math.pow(x, 2) + 1;
+                leftPos = initPos + x * distance;
+                scale = 1.0 - x * scaleFactor;
+                opacity -= 0.02;
 
-                console.log(dt, x, y);
-                divBox1.style.left = y + 'px';
-                // divBox1.style.transform = 'scale(' + initScale + ', ' + initScale + ')';
+                if (leftPos > (finalPos - 1)) {
+                    leftPos = finalPos;
+                    scale = finalScale;
+                }
+
+                console.log(leftPos);
+                divBox2.style.left = leftPos + 'px';
+                divBox2.style.transform = 'scale(' + scale + ', ' + scale + ')';
+                divBox2.style.opacity = opacity;
                 // divBox2.style.left = divBox2InitPos + initPos + 'px';
                 // divBox2.style.transform = 'scale(' + initScale + ', ' + initScale + ')';
 
+                // count += 1;
             }
         }
     }
